# servo-io

./: # Servo: Serverless Data Orchestration P.md  # Servo: Supplementary Design Document cont.md  # Servo: Supplementary Design Document.md  .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  INCREMENT5_PLAN.md  LICENSE  PHASE3B_PLAN.md  PR_PHASE3A.md  README.md  ROADMAP.md  SECURITY.md  Servo Plan.rtf  WEEK2_SUMMARY.md  crates.js  deny.toml  docker-compose.dev.yml  help.html  index.html  servo.toml.example  settings.html  src-files.js  ✅ Increment 1: Single Partition Backfill
.cargo/: audit.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SETUP_GUIDE.md  branch-protection-simple.json  branch-protection.json  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  coverage.yml  deny.yml  docs.yml  labeler.yml  python-ci.yml  release.yml  stale.yml
deploy/: README.md  prometheus.dev.yml
deploy/alerts/: servo-alerts.yaml  servo-slo-alerts.yaml
deploy/dashboards/: backfill-operations.json  data-quality.json  infrastructure.json  slo-overview.json  workflow-execution.json
deploy/slo/: servo-slos.yaml
dev/bench/: data.js
docs/: WORKLOAD_IDENTITY_MIGRATION.md  quality-checks.md
docs/adr/: 001-partition-runtime-support.md
docs/runbooks/: backfill-operations.md  backfill-sla-breach.md  backfill-sla-risk.md  backfill-throughput.md  circuit-breaker-open.md  data-quality-failures.md  database-slow.md  error-budget-burn.md  high-error-rate.md  high-latency.md  index.md  (+3 more)
scripts/: build-release.sh  run-tests.sh  setup-dev.sh
search.index/: 02194bf52d7b.js  02373ff88343.js  051eedf82c89.js  075aa5d8e649.js  0778019f6428.js  0a5e5d6ea9f7.js  0cbadbb774e4.js  0fb85adc4641.js  11c69ad4b327.js  12f28d4d937c.js  13945deef1a9.js  13cd4c335201.js  15d4eea54a27.js  186412dfa45b.js  18cfc23dcdbe.js  1af3620a11a7.js  1e593401409e.js  24d62353e2ce.js  2b56e4913e0f.js  2ec1d0cc44ed.js  2efbf75dc328.js  314b39b619cd.js  3181ed141737.js  343b63548f31.js  382af30df63b.js  393e4f662bbf.js  39f45df9b4fa.js  3a5a034ab5c2.js  3bd5d62a066a.js  3c4d6b2f7da5.js  3e90eb5affc6.js  46f1fed1a88c.js  47d69a739530.js  497b941f1bb6.js  4ace4c9237a1.js  4bf62547a7a3.js  4cf90beb318b.js  4e3c2e387621.js  4f52b0a80586.js  54e01842f8d5.js  (+17 more)
servo/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
servo-cli/: Cargo.toml  README.md
servo-cli/src/: config.rs  main.rs  polling.rs
servo-cli/src/commands/: backfill.rs  deploy.rs  init.rs  lineage.rs  migrate.rs  mod.rs  partition.rs  quality.rs  run.rs  status.rs
servo-cloud-gcp/: Cargo.toml  README.md
servo-cloud-gcp/src/: auth.rs  circuit_breaker.rs  config.rs  executor.rs  health.rs  lib.rs  metrics.rs  monitoring.rs  queue.rs  scheduler.rs  secrets.rs  signing.rs  trace_context.rs
servo-cloud-gcp/tests/: cloud_tasks_contract.rs  cloud_tasks_real_integration.rs  executor_integration.rs  integration_test.rs  integration_tests.rs  orchestrator_integration.rs
servo-core/: Cargo.toml  README.md
servo-lineage/: Cargo.toml  README.md
servo-lineage/benches/: lineage_benchmarks.rs
servo-lineage/src/: graph.rs  impact.rs  lib.rs  queries.rs
servo-python/: README.md  pyproject.toml
servo-python/examples/: simple_etl.py
servo-python/servo/: __init__.py  asset.py  client.py  context.py  exceptions.py  partitions.py  quality.py  types.py  workflow.py
servo-python/tests/: __init__.py  test_asset.py  test_context.py  test_exceptions.py  test_partitions.py  test_quality.py  test_quality_integration.py  test_workflow.py
servo-runtime/: Cargo.toml  README.md
servo-runtime/src/: backfill_executor.rs  concurrency.rs  converters.rs  eta.rs  executor.rs  lib.rs  local_executor.rs  metrics.rs  orchestrator.rs  partition_resolver.rs  retry.rs  state_machine.rs  task_enqueuer.rs
servo-runtime/tests/: backfill_integration.rs  local_executor_integration.rs  orchestrator_integration.rs  partition_mapping_integration.rs  upstream_propagation_integration.rs
servo-runtime/tests/fixtures/: test_module.py
servo-storage/: Cargo.toml  README.md
servo-storage/migrations/: 001_initial_schema.sql  002_enforce_rls.sql  003_add_constraints.sql  004_add_idempotency_key.sql  005_add_workflow_assets.sql  006_add_asset_checks.sql  007_add_backfill_tables.sql  008_add_backfill_overlap_prevention.sql  009_add_backfill_progress_tracking.sql  010_add_upstream_propagation.sql  011_add_backfill_sla_tracking.sql  012_add_partition_config.sql  013_add_compute_function.sql  014_add_workflow_schedules.sql
servo-storage/src/: circuit_breaker.rs  lib.rs  metrics.rs  migrations.rs  models.rs  postgres.rs  tenant.rs
servo-storage/tests/: chaos.rs
servo-storage/tests/chaos/: circuit_breaker_tests.rs  timeout_tests.rs
servo-tests/: Cargo.toml
servo-tests/src/: assertions.rs  builders.rs  fixtures.rs  lib.rs  mocks.rs
servo-tests/tests/: e2e_quality_checks.rs
servo-worker/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
servo-worker/src/: check_validator.rs  config.rs  environment.rs  executor.rs  handler.rs  lib.rs  main.rs  metrics.rs  oidc.rs  pii.rs  rate_limiter.rs  secrets_provider.rs  security.rs  sensitive_filter.rs  tracing_config.rs  types.rs
servo-worker/tests/: contract_tests.rs  oidc_validation_test.rs
servo_cloud_gcp/: all.html  enum.Error.html  index.html  sidebar-items.js  type.Result.html
servo_core/: all.html  enum.Error.html  index.html  sidebar-items.js  type.Result.html
servo_lineage/: all.html  enum.Error.html  index.html  sidebar-items.js  type.Result.html
servo_runtime/: all.html  enum.Error.html  index.html  sidebar-items.js  type.Result.html
servo_storage/: all.html  enum.Error.html  index.html  sidebar-items.js  type.Result.html
tests/: e2e_workflow_execution.rs  secure_worker_test.rs
(+187 files in other folders)
