[workspace]
resolver = "2"
members = [
    "servo-core",
    "servo-runtime",
    "servo-lineage",
    "servo-storage",
    "servo-cloud-gcp",
    "servo-cli",
    "servo-worker",
    "servo-tests",
]
exclude = [
    # Placeholder/work-in-progress crates not present in this workspace
    "servo-cloud-aws",
    "servo-cloud-azure",
    "servo-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Servo Team <team@servo.dev>"]
license = "Apache-2.0"
repository = "https://github.com/servo-orchestration/servo"
homepage = "https://servo.dev"
documentation = "https://docs.servo.dev"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph algorithms
petgraph = "0.6"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry (distributed tracing)
opentelemetry = { version = "0.24", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.16"
tracing-opentelemetry = "0.25"

# gRPC (for OTLP export to Cloud Trace)
tonic = { version = "0.12", features = ["tls", "tls-roots"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Testing
mockall = "0.12"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
criterion = { version = "0.5", features = ["async_tokio"] }
regex = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
