[package]
name = "servo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI tool for Servo orchestration platform"

[[bin]]
name = "servo"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging/tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal dependencies
servo-core = { path = "../servo-core" }
servo-runtime = { path = "../servo-runtime" }
servo-storage = { path = "../servo-storage" }

[dev-dependencies]
