[package]
name = "servo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI tool for Servo orchestration platform"

[[bin]]
name = "servo"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"

# Configuration
dirs = "5"

# UUID
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging/tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/Time
chrono = { workspace = true }
chrono-tz = "0.8"

# Cron expression parsing
cron = "0.12"

# Database (for model types)
sqlx = { workspace = true }

# Internal dependencies
servo-core = { path = "../servo-core" }
servo-lineage = { path = "../servo-lineage" }
servo-runtime = { path = "../servo-runtime" }
servo-storage = { path = "../servo-storage" }
servo-cloud-gcp = { path = "../servo-cloud-gcp" }

[dev-dependencies]
tempfile = "3"
