[package]
name = "servo-cloud-gcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "GCP adapter for Servo (Cloud Tasks, Cloud Run)"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Cryptography (HMAC signing, JWT)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"
jsonwebtoken = "9.2"
base64 = "0.21"

# UUID
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Random (for backoff jitter)
rand = "0.8"

# Metrics
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

# Internal dependencies
servo-core = { path = "../servo-core" }
servo-runtime = { path = "../servo-runtime" }
servo-storage = { path = "../servo-storage" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
