[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servo-orchestrator"
version = "0.1.0"
description = "Python SDK for Servo - Asset-centric data orchestration platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Servo Contributors" }
]
keywords = ["orchestration", "data-engineering", "etl", "workflow", "assets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing_extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]
pandas = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]
polars = [
    "polars>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/servo-io/servo"
Documentation = "https://servo.io/docs"
Repository = "https://github.com/servo-io/servo"
Issues = "https://github.com/servo-io/servo/issues"

[tool.hatch.build.targets.wheel]
packages = ["servo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=servo --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM105", # contextlib.suppress - prefer explicit try/except for clarity
    "TC003",  # TYPE_CHECKING imports - not needed for small codebase
]

[tool.ruff.lint.isort]
known-first-party = ["servo"]

[tool.coverage.run]
source = ["servo"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
