[package]
name = "servo-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Execution runtime for Servo workflows"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Random number generation (for retry jitter)
rand = "0.8"

# Metrics
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

# Internal dependencies
servo-core = { path = "../servo-core" }
servo-storage = { path = "../servo-storage" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall = { workspace = true }
sqlx = { workspace = true } # For integration tests that create test data
