[package]
name = "servo-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Metadata storage for Servo using PostgreSQL"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Internal dependencies
servo-core = { path = "../servo-core" }
servo-runtime = { path = "../servo-runtime" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
